Added new fields for user entity and changed cascade delete