@@ -3,15 +3,13 @@ package com.example.workouttracker.security;
 import com.example.workouttracker.core.user.RoleType;
 import com.example.workouttracker.core.user.UserEntity;
 import com.example.workouttracker.core.user.UserRepository;
-import com.example.workouttracker.core.userMeasurement.UserMeasurementEntity;
 import lombok.AllArgsConstructor;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Set;
+import java.util.Collections;
 
 @Service
 @AllArgsConstructor
@@ -28,13 +26,20 @@ public class AuthenticationService {
                 .ifPresent(user -> {
                     throw new RuntimeException("User with this email already exists");
                 });
+
+        if (!input.isTermsAndConditionsAccepted()) {
+            throw new RuntimeException("Terms and conditions must be accepted");
+        }
+
         UserEntity user = new UserEntity();
         user.setEmail(input.getEmail());
         user.setFirstName(input.getFirstName());
         user.setLastName(input.getLastName());
         user.setPassword(passwordEncoder.encode(input.getPassword()));
-        user.setRoles(Set.of(RoleType.USER));
-        user.setUserMeasurement(List.of(new UserMeasurementEntity()));
+        user.setRoles(Collections.singleton(RoleType.USER));
+        user.setGenders(input.getGenders());
+        user.setTermsAndConditionsAccepted(input.isTermsAndConditionsAccepted());
+
 
         return userRepository.save(user);
     }
